--- a/package.json
+++ b/package.json
@@ -3,23 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.13.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.0",
+    "@mui/lab": "^5.0.0-alpha.67",
+    "@mui/material": "^6.2.0",
+    "@mui/styles": "^6.2.0",
+    "@tanstack/react-query": "^5.62.7",
+    "@uiw/react-json-view": "^2.0.0-alpha.30",
+    "axios": "^1.7.9",
+    "date-fns": "^2.28.0",
+    "material-icons": "^1.13.12",
+    "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.0"
+    "react-simple-wysiwyg": "^3.2.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
